add gitlab ci config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,10 @@ image: "ubuntu:latest"
 
 before_script:
   - apt-get update -qq
-  - apt-get install openjdk-8-jdk
+  - yes | apt-get install openjdk-8-jdk
+  - java -version
+  - curl -L https://packages.gitlab.com/install/repositories/runner/gitlab-runner/script.deb.sh | sudo bash
+  - apt-get install gitlab-runner
 
 test:
   script:
