--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ before_script:
   - apt-get update -qq
   - apt-get install --yes --force-yes openjdk-8-jdk
   - java -version
-  - curl -L https://packages.gitlab.com/install/repositories/runner/gitlab-runner/script.deb.sh | sudo bash
+  - curl -L https://packages.gitlab.com/install/repositories/runner/gitlab-runner/script.deb.sh
   - apt-get install gitlab-runner
 
 test:
