--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,12 @@ before_script:
   - java -version
   - apt-get install --yes --force-yes curl
   - curl --version
-  - curl -L https://packages.gitlab.com/install/repositories/runner/gitlab-runner/script.deb.sh
-  - apt-get install --yes --force-yes gitlab-runner
+  - apt-get install wget
+  - apt-get install -y unzip
+  - wget https://dl.google.com/android/repository/sdk-tools-linux-6609375.zip
+  - unzip sdk-tools-linux-6609375.zip -d android-sdk
+  - ls
+#  - export PATH=/opt/pradip/tools:/opt/pradip/tools/bin:$PATH
 
 test:
   script:
