--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: "ubuntu:latest"
 
 before_script:
+  - cd ~
   - apt-get update -qq
   - apt-get install --yes --force-yes openjdk-8-jdk
   - java -version
@@ -10,11 +11,16 @@ before_script:
   - apt-get install -y unzip
   - wget https://dl.google.com/android/repository/sdk-tools-linux-3859397.zip
   - unzip sdk-tools-linux-3859397.zip -d android-sdk
-  - ls
+  - cd android-sdk/tools
   - ./android update sdk --no-ui
   - ./sdkmanager "build-tools;28.0.3,platforms;android-28"
-  - wget https://services.gradle.org/distributions/gradle-4.1-all.zip
-  - unzip gradle-4.1-all.zip -d gradle
+  - cd ~
+  - wget https://services.gradle.org/distributions/gradle-5.6.2-all.zip
+  - unzip gradle-5.6.2-all.zip -d gradle
+  - apt-get install -y libc6:i386 libstdc++6:i386 zlib1g:i386
+  - export ANDROID_HOME=/opt/android-sdk
+  - export PATH=$PATH:/opt/android-sdk/platform-tools
+  - export PATH=$PATH:/opt/android-sdk/tools
 #  - export PATH=/opt/pradip/tools:/opt/pradip/tools/bin:$PATH
 
 test:
