--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,11 +23,16 @@ before_script:
   - echo y | sdkmanager "build-tools;28.0.3"
   - echo y | sdkmanager "extras;android;m2repository"
   - echo y | sdkmanager "extras;google;m2repository"
-  - adb devices
+  - emulator/emulator -avd Nexus_5X_API_23 -netdelay none -netspeed full
   - git clone https://github.com/flutter/flutter.git -b v1.12.13+hotfix.5
   - export PATH="$PATH:`pwd`/flutter/bin"
+  - echo y | flutter doctor --android-licenses
   - flutter doctor -v
+  - flutter packages get
+  - flutter clean
+
 
 test:
   script:
-    - echo done
+    - flutter test test/home_page_bloc_test.dart
+    - test test/home_page_test.dart
