add gitlab ci config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,10 +23,11 @@ before_script:
   - echo y | sdkmanager "build-tools;28.0.3"
   - echo y | sdkmanager "extras;android;m2repository"
   - echo y | sdkmanager "extras;google;m2repository"
-  - emulator/emulator -avd Nexus_5X_API_23 -netdelay none -netspeed full
   - git clone https://github.com/flutter/flutter.git -b v1.12.13+hotfix.5
   - export PATH="$PATH:`pwd`/flutter/bin"
   - echo y | flutter doctor --android-licenses
+  - avdmanager create avd -n Android28 -k "system-images;android-28;google_apis;x86"
+  - emulator -avd Android28
   - flutter doctor -v
   - flutter packages get
   - flutter clean
