add gitlab ci config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,12 +17,14 @@ before_script:
   - export ANDROID_HOME="$PATH:`pwd`/android-sdk"
   - export PATH="$PATH:`pwd`/android-sdk/platform-tools"
   - export PATH="$PATH:`pwd`/android-sdk/tools/bin"
-  - sdkmanager --list
-  - echo y | sdkmanager "platforms;android-28"
+  - echo y | sdkmanager "platforms;android-29"
   - echo y | sdkmanager "platform-tools"
-  - echo y | sdkmanager "build-tools;28.0.3"
+  - echo y | sdkmanager "build-tools;29.0.3"
   - echo y | sdkmanager "extras;android;m2repository"
   - echo y | sdkmanager "extras;google;m2repository"
+  - echo y | sdkmanager "system-images;android-29;google_apis_playstore;x86_64"
+  - echo no | avdmanager create avd -n android29 -k "system-images;android-29;google_apis_playstore;x86_64"
+  - emulator -avd android29 -netdelay none -netspeed full
   - git clone https://github.com/flutter/flutter.git -b v1.12.13+hotfix.5
   - export PATH="$PATH:`pwd`/flutter/bin"
   - flutter doctor -v
